<?xml version="1.0"?>
<package format="3">
  <name>system_interfaces</name>
  <version>0.0.0</version>

  <!-- description 태그는 딱 1개, & 같은 특수문자도 쓰지 말기 -->
  <description>System interfaces for robot control and perception.</description>

  <maintainer email="jiwoo@example.com">Jiwoo</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- runtime / build deps -->
  <depend>rosidl_default_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- 이 패키지가 interface 패키지라는 표시 -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>  